Update index.html: correct title, modify header, and enhance footer with logo and contact link

--- a/website/index.html
+++ b/website/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Informatiquee</title>
+    <title>Informatique</title>
     <link rel="stylesheet" href="style.css" />
+  
+    <link rel="icon" href="assets/images/logo.jpg" />
   </head>
   <body>
     <!-- Header -->
     <header>
-      <h1>Université Informatique</h1>
+      <h1>Universités Informatique</h1>
       <nav>
         <a href="#">Accueil</a>
         <a href="#">Programmes</a>
         <a href="#">À propos</a>
-        <a href="#">Contact</a>
+        <a href="https://t.me/Developing_off">Contact</a>
       </nav>
     </header>
 
@@ -22,9 +24,9 @@
     <section class="hero">
       <h2>Explorez l'avenir de l'informatique</h2>
       <p>
-        Rejoignez notre université et formez-vous aux technologies de demain
+        Rejoignez Nous & formez-vous aux technologies de demain
       </p>
-      <a href="#">Rejoindre l'Université</a>
+      
     </section>
     <!-- Courses Section -->
     <section class="programs">
@@ -36,6 +38,7 @@
 
     <!-- Collaboration Section -->
     <section class="collaborate-section">
+      <h1>error</h1>
       <h2>Collaborez avec vos camarades</h2>
       <p>
         Partagez vos ressources et vos liens avec vos collègues en sélectionnant
@@ -86,8 +89,8 @@
       </div>
 
       <div class="footer-logo">
-        <img src="https://via.placeholder.com/100" alt="Logo" />
-        <span>Université Informatique - Nom Prénom</span>
+        <img src="assets/images/logo.jpg" alt="Logo" />
+        <span> - Developing_OFF</span>
       </div>
     </footer>
     <script src="script.js"></script>
