--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   
     <link rel="icon" href="assets/images/logo.jpg" />
+ 
+    <meta property="og:image" content="https://th.bing.com/th/id/OIP.5CndTkd0-nqGwgaoMXgPxwHaCU?rs=1&pid=ImgDetMain" />
   </head>
   <body>
     <!-- Header -->
