Update favicon in index.html to use new logo image

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <title>Informatique</title>
     <link rel="stylesheet" href="style.css" />
   
-    <link rel="icon" href="assets/images/logo.jpg" />
+    <link rel="icon" href="assets/images/logo2.jpg" />
  
     <meta property="og:image" content="https://th.bing.com/th/id/OIP.5CndTkd0-nqGwgaoMXgPxwHaCU?rs=1&pid=ImgDetMain" />
   </head>
