Update navigation links and section IDs in index.html for improved accessibility

--- a/website/index.html
+++ b/website/index.html
@@ -19,8 +19,8 @@
       <h1>Universités Informatique</h1>
       <nav>
         <a href="#">Accueil</a>
-        <a href="#">Programmes</a>
-        <a href="#">À propos</a>
+        <a href="#programme">Programmes</a>
+        
         <a href="https://t.me/Developing_off">Contact</a>
       </nav>
     </header>
@@ -31,7 +31,7 @@
       <p>Rejoignez Nous & formez-vous aux technologies de demain</p>
     </section>
     <!-- Courses Section -->
-    <section class="programs">
+    <section id="programme" class="programs">
       <h2>Programmes Universitaires</h2>
       <div id="university-programs">
         <!-- Conteneur pour afficher les universités et leurs programmes -->
@@ -128,10 +128,10 @@
     <!-- Footer -->
     <footer>
       <div class="footer-links">
-        <a href="https://github.com/ton-projet" target="_blank"
+        <a href="#" target="_blank"
           >Contribute on GitHub</a
         >
-        <a href="mailto:feedback@universite.com">Give us your feedback</a>
+        <a href="https://t.me/Developing_off">Give us your feedback</a>
         <a href="#">Submit a document</a>
       </div>
 
