Update footer link to point to the GitHub repository for contributions

--- a/website/index.html
+++ b/website/index.html
@@ -128,7 +128,7 @@
     <!-- Footer -->
     <footer>
       <div class="footer-links">
-        <a href="#" target="_blank"
+        <a href="https://github.com/developing-off/info-resources" target="_blank"
           >Contribute on GitHub</a
         >
         <a href="https://t.me/Developing_off">Give us your feedback</a>
