Update university options in index.html and add USTO link in modules_data.json

--- a/website/index.html
+++ b/website/index.html
@@ -59,8 +59,9 @@
 
         <label for="university">Université :</label>
         <select id="university" name="university" required>
-          <option value="INFO HUB">INFO HUB</option>
+          <option value="USTO">USTO</option>
           <option value="FSEA ORAN 1">FSEA ORAN 1</option>
+          <option value="ENSTTIC">ENSTTIC</option>
         </select>
 
         <label for="program">Programme :</label>
