--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Informatique</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 
     <link rel="icon" href="assets/images/logo2.jpg" />
 
@@ -141,7 +141,7 @@
         <span> - Developing_OFF</span>
       </div>
     </footer>
-    <script src="script.js"></script>
-    <script src="server-script.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/server-script.js"></script>
   </body>
 </html>
