Add code library page with form submission and display functionality; update navigation links

--- a/website/index.html
+++ b/website/index.html
@@ -18,9 +18,9 @@
     <header>
       <h1>Universités Informatique</h1>
       <nav>
-        <a href="#">Accueil</a>
+        <a href="index.html">Accueil</a>
         <a href="#programme">Programmes</a>
-        
+        <a href="pages/code/code.html">Bibliothèque</a>
         <a href="https://t.me/Developing_off">Contact</a>
       </nav>
     </header>
