--- a/website/pages/code/code.html
+++ b/website/pages/code/code.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bibliothèque de Code</title>
     <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="icon" href="../../assets/images/logo2.jpg" />
+
+    <meta
+      property="og:image"
+      content="https://th.bing.com/th/id/OIP.5CndTkd0-nqGwgaoMXgPxwHaCU?rs=1&pid=ImgDetMain"
+    />
     <style>
       .accordion {
         background-color: #f1f1f1;
