Enhance CORS support and JSON handling in code-submit.php; update fetch request in code.html to include headers and mode

--- a/website/pages/code/code.html
+++ b/website/pages/code/code.html
@@ -144,7 +144,14 @@
           const codeList = document.getElementById('code-list');
     
           // Charger et afficher les extraits depuis codes.json
-          fetch('https://younes-sarni.alwaysdata.net/inforesources/server/codes.json')
+          fetch('https://younes-sarni.alwaysdata.net/inforesources/server/codes.json',{
+            method: 'GET',
+            headers: {
+              'Content-Type': 'application/json'
+            }
+            ,
+            mode: 'no-cors'
+          })
             .then(response => response.json())
             .then(data => {
               data.forEach(item => addCodeAccordion(item.title, item.language, item.code));
