Enhance index.html with improved meta tags for SEO, social sharing, and author information; update title and favicon

--- a/website/index.html
+++ b/website/index.html
@@ -3,15 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Informatique</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Informatique - Ressources et Outils</title>
 
-    <link rel="icon" href="assets/images/logo2.jpg" />
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="Explorez des outils, ressources et informations dédiées à l'informatique pour les étudiants en INFO. Calculez votre moyenne et découvrez nos fonctionnalités."
+    />
 
+    <!-- Meta Keywords -->
+    <meta
+      name="keywords"
+      content="Informatique, L2 INFO, INFO,moyenne, outils étudiants, calculs, ressources informatiques, design web, programmation, algorithmes"
+    />
+
+    <!-- Author -->
+    <meta name="author" content="Sarni Younes" />
+
+    <!-- Open Graph (pour le partage sur les réseaux sociaux) -->
+    <meta property="og:title" content="Informatique - Ressources et Outils" />
+    <meta
+      property="og:description"
+      content="Découvrez nos outils pour étudiants en informatique : calcul de moyenne, ressources et plus encore !"
+    />
     <meta
       property="og:image"
-      content="https://th.bing.com/th/id/OIP.5CndTkd0-nqGwgaoMXgPxwHaCU?rs=1&pid=ImgDetMain"
+      content="assets/images/banner.png"
     />
+    <meta property="og:url" content="https://inforesources.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Informatique - Ressources et Outils" />
+    <meta
+      name="twitter:description"
+      content="Outils dédiés aux étudiants en informatique : calculs, ressources et plus encore pour L2 INFO."
+    />
+    <meta
+      name="twitter:image"
+      content="assets/images/banner.png"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://inforesources.vercel.app/" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="assets/images/logo2.jpg" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
     <style>
       button {
         background-color: #00aaff;
@@ -49,10 +91,8 @@
       <a href="https://moyenne-univ.vercel.app/">
         <button>Calculer votre moyenne</button>
       </a>
-      <br>
-      <div id="university-programs" style="
-      margin-top: 28px;
-  "></div>
+      <br />
+      <div id="university-programs" style="margin-top: 28px"></div>
     </section>
 
     <!-- Collaboration Section -->
