Update index.html to use absolute URLs for Open Graph and Twitter images for improved accessibility and sharing

--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="assets/images/banner.png"
+      content="https://inforesources.vercel.app/assets/images/banner.png"
     />
     <meta property="og:url" content="https://inforesources.vercel.app/" />
     <meta property="og:type" content="website" />
@@ -42,7 +42,7 @@
     />
     <meta
       name="twitter:image"
-      content="assets/images/banner.png"
+      content="https://inforesources.vercel.app/assets/images/banner.png"
     />
 
     <!-- Canonical URL -->
